# HITSZ-OpenAuto

./: LICENSE  README.md
Auto-野生技术指南/: README.md
Auto-野生技术指南/上层/强化学习/: 强化学习路线.md
Auto-野生技术指南/上层/杂项/: Nvidia AGX配置避雷指南.md  README.md
Auto-野生技术指南/底层/STM32/: README.md
Auto-野生技术指南/数学/: 卡尔曼滤波公式推导.md
保研分享/: README.md
大一上/: README.md
大一上/代数与几何/: README.md
大一上/代数与几何/实验报告/: README.md
大一上/代数与几何/电子书/: .gitattributes  README.md
大一上/代数与几何/考试有关/: 2017深圳期中考试解答.doc  2017深圳期中考试试题.doc  2018深圳期中试题及解答.doc  README.md  代数与几何-2015-期中-本部-试题和答案.docx  代数与几何-2016-期末-深圳-试题.docx  代数与几何-2017-期中-本部-试题.docx  代数与几何-2018-期中-本部-试题和答案.doc  代数与几何-2019-期中-本部-试题和答案.docx  代数与几何-2020-期中-本部-试题和答案.docx
大一上/工程制图基础/: README.md
大一上/机器人设计与实践/: README.md
大一上/自动化专业导论/: README.md
大一上/自动化认识与实践/: README.md
大一上/自动化认识与实践/补充资料/: readme.md
大一上/高等数学A/: README.md
大一上/高等数学A/实验报告/: README.md
大一上/高等数学A/电子书/: README.md
大一上/高等数学A/考试有关/: 高数-2017秋-期中-深圳-试卷.doc  高数-2019秋-期中-深圳-试卷.doc
大一上/高等数学A/课件/: 局部线性化与微分.pptx  第01讲 微分方程基本概念.pptx  第02讲 一阶常微分方程求解.pptx  第03讲 可将阶的微分方程.pptx  第12讲 无穷小、无穷大与渐进线.pptx  第13讲 函数的连续性与间断点.pptx  第14讲-导数的概念.pptx  第21讲 罗尔定理与拉格朗日中值定理.pptx  第22讲 柯西中值定理与洛必达法则 (1).pptx  第24讲 函数的单调性及应用.pptx  第25讲 函数的凹凸性及应用.pptx  第28讲 定积分的概念.pptx  第29讲 定积分的性质与基本公式.pptx  第30讲 积分上限函数的应用.pptx  第33讲 定积分的换元法与分部积分法.pptx  第34讲 定积分的计算.pptx  第35讲 定积分的几何应用.pptx  第36讲 定积分的物理应用.pptx  (+2 more)
大一上/高级语言程序设计/: README.md
大一下/: README.md
大一下/中国近现代史纲要/: README.md
大一下/大学物理IA/: README.md
大一下/控制理论中的代数基础/: README.md
大一下/电路IA/: README.md
大一下/电路实验IA/: README.md
大一下/高等数学B/: README.md
大三上/: README.md
大三上/数字图像处理/实验报告/dip_pkg/: CMakeLists.txt  package.xml
大三上/数字图像处理/实验报告/dip_pkg/include/dip_pkg/: expr1.hpp  expr2.hpp  expr3.hpp  expr4.hpp
大三上/数字图像处理/实验报告/dip_pkg/src/: dip8.cpp  expr1.cpp  expr2.cpp  expr3.cpp  expr4.cpp  quaternion_test.cpp
大三上/系统建模与仿真/: README.md
大三上/自动控制实践A/: README.md
大三下/: DSP的原理与应用  README.md
大三下/DSP的原理与应用/: README.md
大三下/数学规划/: README.md
大三下/机器视觉/: README.md
大三下/机器视觉/作业/WFD_Version/05/: CMakeLists.txt  机器视觉 - 第五次作业.md
大三下/机器视觉/作业/WFD_Version/05/src/: imfilter.cpp
大三下/机器视觉/作业/WFD_Version/07/: CMakeLists.txt  imncc.cpp  机器视觉 - 第七次作业.md
大三下/机器视觉/作业/WFD_Version/08/: CMakeLists.txt
大三下/机器视觉/作业/WFD_Version/design/: CMakeLists.txt  imncc_catver.cpp  octncc.cpp  机器视觉 - 课程设计.md
大三下/自动控制实践B/: README.md
大三下/自动控制理论B/: README.md
大三下/课件/: README.md
大三下/过程控制系统/: README.md
大二上/: README.md
大二上/复变函数与积分变换/: README.md
大二上/大学物理实验IA/: README.md
大二上/概率论与数理统计/: README.md
大二下/: README.md
大二下/大学物理实验IB/: README.md
大二下/模拟电子技术基础/: README.md
大二下/模拟电子技术实验/: README.md
大二下/毛泽东思想和中国特色社会主义体系概论/: 串讲回放.md
大二暑期学期/创新实践课B/: 创新训练课B报告.docx  答辩PPT_吴坤远.pptx
工作分享/: README.md
文理通识与MOOC/: README.md
文理通识与MOOC/全球化与世界空间/: 全球化与世界空间.txt
文理通识与MOOC/创造性思维与创新方法/: 创造性思维与创新方法.txt
文理通识与MOOC/可持续发展时代/: 可持续发展时代 (改).txt  可持续发展时代期末答案.txt
文理通识与MOOC/国际交流英语/: 国交流答案.docx
文理通识与MOOC/大学生劳动就业法律问题解读/: 大学生劳动就业法律问题解读.md
文理通识与MOOC/奇异的仿生学/: 奇异的仿生学答案整理.docx
文理通识与MOOC/成功求职六步走/: 成功求职六步走.txt
文理通识与MOOC/新科学家英语/: 新科学家英语.md  新科学家英语：演讲与写作.docx
文理通识与MOOC/智慧树关爱生命/: 智慧树关爱生命---自救与急救技能章节习题及答案.docx
文理通识与MOOC/游戏化思维/: 游戏化思维参考答案.docx
文理通识与MOOC/职业发展英语/: 职English.docx
文理通识与MOOC/设计的人因与文化/: 设计的人因与文化.txt
文理通识与MOOC/领袖智慧/: Leader智慧-大学生学（密码leader）.7z
留学分享/: README.md
自动化课外技术指南/: README.md
自动化课外技术指南/ROS/: README.md
自动化课外技术指南/STM32/: README.md
(+281 files in other folders)
